objects/Configurazione_VLAN__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>COS1CIR__c</fullName>
        <label>COS1CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS1PIR__c</fullName>
        <label>COS1PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS3CIR__c</fullName>
        <label>COS3CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS3PIR__c</fullName>
        <label>COS3PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS5CIR__c</fullName>
        <label>COS5CIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS5PIR__c</fullName>
        <label>COS5PIR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opzione__c</fullName>
        <label>Opzione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profilo__c</fullName>
        <label>Profilo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configurazione VLAN</label>
</CustomObject>